# antigravityDL

./: .gitignore  ANDROID_PORTING.md  CHANGELOG.md  HOW_TO_RELEASE.md  LICENSE  MANIFEST.in  Markdown.md  PYPI_PUBLISHING.md  README.md  RELEASE_NOTES.md  SCREENSHOTS_GUIDE.md  ai_project_info.json  config.json  main.py  pyproject.toml  requirements.txt  run.bat
antigravitydl/: __init__.py  main.py
antigravitydl/web/: script.js
web/: index.html  style.css
