[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravitydl"
version = "1.0.0"
description = "A powerful, user-friendly video downloader supporting YouTube, Facebook, Instagram, Twitter, TikTok, and more"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Amila Anjana", email = "your.email@example.com"}
]
keywords = ["video", "downloader", "youtube", "instagram", "facebook", "tiktok", "yt-dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "eel>=0.14.0",
    "yt-dlp>=2023.0.0",
    "browser-cookie3>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/amilaanjanab/antigravityDL"
Repository = "https://github.com/amilaanjanab/antigravityDL"
Issues = "https://github.com/amilaanjanab/antigravityDL/issues"

[project.scripts]
antigravitydl = "antigravitydl.main:main"

[tool.setuptools]
packages = ["antigravitydl"]

[tool.setuptools.package-data]
antigravitydl = ["web/*", "web/**/*"]
